--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-  "apiUrl": "http://localhost:8000/api/v1/"
+  "apiUrl": "http://localhost:8000/api/v1/",
+  "mediaUrl": "http://localhost:8000"
 }
