--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.0.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "8.0.0",
