--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ofertapp_frontend",
   "version": "0.1.0",
+  "homepage": "https://ofertap-unal.github.io/OfertApp-Frontend",
   "private": true,
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.9",
@@ -11,6 +12,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "gh-pages": "^6.1.1",
     "joi-browser": "^13.4.0",
     "mercadopago": "^0.0.6",
     "react": "^18.2.0",
@@ -37,10 +39,10 @@
     "workbox-streams": "^6.5.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
